@@ -67,6 +67,9 @@
 	<LI>HTMLDOC generated an incorrect image mask for some
 	images.
 
+	<LI>The first page of each chapter did not use the
+	custom page number if it was placed inside the heading.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
