@@ -2,7 +2,7 @@
 <HEAD>
 	<META NAME="author" CONTENT="Easy Software Products">
 	<META NAME="copyright" CONTENT="Copyright 1997-2003, See the GNU General Public License for Details.">
-	<META NAME="docnumber" CONTENT="ESP-003-20030321">
+	<META NAME="docnumber" CONTENT="ESP-003-20030731">
 	<TITLE>HTMLDOC 1.8.24 Software Users Manual</TITLE>
 </HEAD>
 <BODY>
